# python_package_template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  python_package_template.html  search.js
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  mergify.yml
.github/workflows/: build.yml  docs.yml  lint.yml  release-please.yml  release.yml  test.yml
src/python_package_template/: __init__.py  template.py
tests/: test_template.py
tests/python_package_template/: test_template.py
