[project]
name = "python_package_template"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Python Package Template"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.optional-dependencies]
build = [
    "build==1.4.0",
    "twine==6.2.0",
]
docs = [
    "pdoc==16.0.0",
]
lint = [
    "black==25.12.0",
    "isort==7.0.0",
    "pre-commit==4.5.1",
    "ruff==0.14.13",
]
test = [
    "coverage==7.13.1",
    "pytest==9.0.2",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/python_package_template"
Issues = "https://github.com/remarkablemark/python_package_template/issues"

[tool.black]
fast = true

[tool.coverage.run]
omit = [
    "/tmp/*",
]
