[project]
name = "python-package-template"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Python Package Template"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.optional-dependencies]
build = [
    "build==1.4.0",
    "twine==6.2.0",
]
docs = [
    "pdoc==16.0.0",
]
lint = [
    "black==26.1.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "ruff==0.14.14",
]
test = [
    "coverage==7.13.2",
    "pytest==9.0.2",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/python-package-template"
Issues = "https://github.com/remarkablemark/python-package-template/issues"

[tool.black]
fast = true

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    '^tests/.*'
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "/opt/*",
    "/tmp/*",
]
