[project]
name = "python-package-template"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Python Package Template"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.optional-dependencies]
docs = [
    "pdoc==16.0.0",
]
lint = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "ruff==0.15.2",
]
test = [
    "coverage==7.13.4",
    "pytest==9.0.2",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/python-package-template"
Issues = "https://github.com/remarkablemark/python-package-template/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001",  # unused arguments in functions
    "T201",  # no print statements
]
ignore = [
    "E501",  # line too long (handled by ruff)
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    '^tests/.*'
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "/opt/*",
    "/tmp/*",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
fail_under = 100

[tool.coverage.html]
show_contexts = true
